--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,8 @@ GRAFANA_SECURITY_ADMIN_USER=yourname
 ## Grafana ログイン情報
 GRAFANA_SECURITY_ADMIN_PASSWORD=password
 
+EMAIL=hoge@hoge.com
+
 # Ports
 PROMETHEUS_INTERNAL_PORT=9090
 LOKI_INTERNAL_PORT=3100
@@ -24,10 +26,14 @@ GRAFANA_NAME=grafana
 EDGE_NAME=edge
 
 # Hostnames
-PROMETHEUS_HOST="${ENV_PREFIX}.${PROMETHEUS_NAME}.${BASE_DOMAIN}"
-LOKI_HOST="${ENV_PREFIX}.${LOKI_NAME}.${BASE_DOMAIN}"
-GRAFANA_HOST="${ENV_PREFIX}.${GRAFANA_NAME}.${BASE_DOMAIN}"
-EDGE_HOST="${ENV_PREFIX}.${EDGE_NAME}.${BASE_DOMAIN}"
+PROMETHEUS_HOST="${ENV_PREFIX}${PROMETHEUS_NAME}.${BASE_DOMAIN}"
+LOKI_HOST="${ENV_PREFIX}${LOKI_NAME}.${BASE_DOMAIN}"
+GRAFANA_HOST="${ENV_PREFIX}${GRAFANA_NAME}.${BASE_DOMAIN}"
+EDGE_HOST="${ENV_PREFIX}${EDGE_NAME}.${BASE_DOMAIN}"
 
-
+# Host metrics services
+NODE_EXPORTER_NAME=node-exporter
+NODE_EXPORTER_PORT=9100
+CADVISOR_NAME=cadvisor
+CADVISOR_PORT=8080
 
