外からアクセスできるようにポート開放

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,7 @@ GRAFANA_SECURITY_ADMIN_PASSWORD=password
 EMAIL=hoge@hoge.com
 
 # Ports
+LOKI_PORT=9999
 PROMETHEUS_INTERNAL_PORT=9090
 LOKI_INTERNAL_PORT=3100
 GRAFANA_INTERNAL_PORT=3000
