host名設定修正

--- a/edge/nginx/templates/grafana.conf.template
+++ b/edge/nginx/templates/grafana.conf.template
@@ -3,7 +3,7 @@ server {
   server_name ${GRAFANA_HOST};
 
   location / {
-    proxy_pass http://${GRAFANA_NAME}:${GRAFANA_INTERNAL_PORT};
+    proxy_pass http://${GRAFANA_HOST}:${GRAFANA_INTERNAL_PORT};
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
