--- a/edge/nginx/templates/loki.conf.template
+++ b/edge/nginx/templates/loki.conf.template
@@ -3,7 +3,7 @@ server {
   server_name ${LOKI_HOST};
 
   location / {
-    proxy_pass http://${LOKI_NAME}:${LOKI_INTERNAL_PORT};
+    proxy_pass http://${LOKI_HOST}:${LOKI_INTERNAL_PORT};
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
